feat: Responsividade 1300px semi finalizada

--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
                     <img src="img/logo_principal.svg" alt="Banner Gaia.Int">
                     <div class="menu">
                         <nav class="menu">
+                            <p> Navegue por aqui</p>
                             <a href="#sobre">Sobre</a>
                             <a href="#orcamento">Orçamentos</a>
                             <a href="#cases">Cases</a>
                             <a href="#empresa">A empresa</a>
                             <a href="#duvidas">Duvidas</a>
-                                
+                            <button> Fechar </button>
+                        </nav>
                     </div>
 
                 
