--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
                             <button> Fechar </button>
                         </nav>
                     </div>
-
-                
-                    
+                    <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></button>
                 </div>
             </header>
         </div>
@@ -62,19 +60,19 @@
         <div class="container-cards">
             <div class="card">
                 <label for="campo-nome">Nome</label>
-                <input id="campo-nome" placeholder="Digite seu nome">
+                <input required id="campo-nome" placeholder="Digite seu nome">
             </div>
             <div class="card">
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
+                <input required type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
             </div>
             <div class="card">
                 <label for="campo-email">E-mail</label>
-                <input type="email" id="campo-email" placeholder="Digite seu E-mail">
+                <input  required type="email" id="campo-email" placeholder="Digite seu E-mail">
             </div>
             <div class="campo-textarea">
                 <label for="campo-descricao">Qual seu problema?</label>
-                <textarea name="" id="campo-descricao" cols="40" rows="8"
+                <textarea  required name="" id="campo-descricao" cols="40" rows="8"
                     placeholder="Nos conte o motivo de sua procura"></textarea>
             </div>
         </div>
