feat: Funcionalidade finalizada

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -23,7 +24,7 @@
                 <div class="container-grid">
                     
                     <img src="img/logo_principal.svg" alt="Banner Gaia.Int">
-                    <div class="menu">
+                    <div id="menu" class="menu">
                         <nav class="menu">
                             <p> Navegue por aqui</p>
                             <a href="#sobre">Sobre</a>
@@ -31,10 +32,10 @@
                             <a href="#cases">Cases</a>
                             <a href="#empresa">A empresa</a>
                             <a href="#duvidas">Duvidas</a>
-                            <button> Fechar </button>
+                            <button onclick="fecharMenu()"> Fechar </button>
                         </nav>
                     </div>
-                    <button><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></button>
+                    <button onclick="abrirMenu()"><svg id= "icone-barras" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/></svg></button>
                 </div>
             </header>
         </div>
@@ -56,7 +57,7 @@
 
 <section id="orcamento">
     <h2>Faça já seu orçamento !!</h2>
-    <form>
+    <form onsubmit="solicitarOrcamento(event)">
         <div class="container-cards">
             <div class="card">
                 <label for="campo-nome">Nome</label>
@@ -151,9 +152,9 @@
                 <a href="#topo">Voltar ao topo</a>
             </div>
             <div class="botaor">
-                <a href="https://www.instagram.com/gaia.1nt/"> <img src="img/instasvg.svg" alt=""> Instagram </a>
-                <a href="http://"> <img src="img/fac.svg" alt=""> Facebook </a>
-                <a href="https://twitter.com/Ga1a_Int"><img src="img/twitter. svg.svg" alt=""> Twitter </a>
+                <a href="https://www.instagram.com/gaia.1nt/" target="_blank"> <img src="img/instasvg.svg" alt=""> Instagram </a>
+                <a href="http://" target="_blank"> <img src="img/fac.svg" alt=""> Facebook </a>
+                <a href="https://twitter.com/Ga1a_Int" target="_blank"><img src="img/twitter. svg.svg" alt=""> Twitter </a>
             </div>
 
         </div>
